--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-<center><h1>This is a functional web server!</h1></center>
+<!DOCTYPE html>
+<html>
+    <head>
+        <link rel="stylesheet" href="mainpagelooks.css">
+        <script scr="mainpagecode.js"></script>
+        <title>
+            Slay On The Sax
+        </title>
+    </head>
+<body>
+    
+    <center><h1>This is a functional web server!</h1></center>
+
+</body>
+
+
+
+
+</html>
