Testing github yaml...

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
 <body>
     
-    <center><h1>This is a functional web server!</h1></center>
+    <center><h1>This is a functional web server, that can be updated by Github!</h1></center>
 
 </body>
 
