Updated with some basic website contents

--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
         </title>
     </head>
 <body>
-    
+    <div class = "Saxaboom" id="saxaboom">
+        <audio controls id="saxophoneaudio" hidden>
+            <source src ="Jack-a-Dandy.mp3" type="audio/mpeg">
+            <p>If you're reading this, the music's bugged!</p>
+        </audio>
+    </div>
     <center><h1>This is a functional web server!</h1></center>
+    <button onClick="Saxophone">Let's get funky!</button>
 
 </body>
 
