Mild adjustments & addition of an output file!

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         </audio>
     </div>
     <center><h1>This is a functional web server!</h1></center>
-    <button onClick="Saxophone()">Let's get funky!</button>
+
+    <button onClick='Saxophone()'>Let's get funky!</button>
 
 </body>
 
