--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="mainpagelooks.css">
-        <script scr="mainpagecode.js"></script>
+        <script scr="index.js"></script>
         <title>
             Slay On The Sax
         </title>
